welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: not found: value pink
		if(getCouleurSol == pink) {
                                    ^